# SOAS

./: Cargo.toml  LICENSE  README.md
src/: config.rs  error.rs  ffi.rs  lib.rs  models.rs
src/content/: csv_extractor.rs  docx.rs  image.rs  mod.rs  pdf.rs  text.rs
src/embeddings/: ollama.rs
src/indexer/: mod.rs  pipeline.rs  watcher.rs
src/search/: engine.rs  mod.rs
src/storage/: sqlite.rs
src/vector_store/: memory.rs  mod.rs
src/virtual_fs/: manager.rs  mod.rs
